Styles/style.css
@import url("https://use.typekit.net/cpw6jin.css");

:root {
  --shadow-color: 42deg 39% 50%;
  --shadow-elevation-medium: 0.7px 0.7px 0.9px hsl(var(--shadow-color) / 0.58),
    1.3px 1.2px 1.5px -1px hsl(var(--shadow-color) / 0.49),
    3.1px 2.8px 3.6px -2.1px hsl(var(--shadow-color) / 0.39),
    7.5px 6.8px 8.8px -3.2px hsl(var(--shadow-color) / 0.3),
    16px 14.4px 18.7px -4.2px hsl(var(--shadow-color) / 0.2);

  --shadow-elevation-high: 0.7px 0.7px 0.9px hsl(var(--shadow-color) / 0.54),
    1.9px 1.7px 2.2px -0.5px hsl(var(--shadow-color) / 0.5),
    3.5px 3.1px 4.1px -0.9px hsl(var(--shadow-color) / 0.45),
    6.2px 5.6px 7.3px -1.4px hsl(var(--shadow-color) / 0.41),
    10.9px 9.8px 12.8px -1.9px hsl(var(--shadow-color) / 0.36),
    18.1px 16.3px 21.2px -2.3px hsl(var(--shadow-color) / 0.32),
    28.6px 25.7px 33.5px -2.8px hsl(var(--shadow-color) / 0.28),
    43.1px 38.8px 50.5px -3.3px hsl(var(--shadow-color) / 0.23),
    62.4px 56.1px 73px -3.7px hsl(var(--shadow-color) / 0.19),
    87px 78.3px 101.8px -4.2px hsl(var(--shadow-color) / 0.15);

  --primary: #225ce3;
  --neutral-100: #ffefca;
}

footer {
  position: fixed;
  bottom: 0;
  text-align: right;
  width: 100vw;
  padding-right: 1rem;
  padding-bottom: 0.3rem;
  font-size: 0.8rem;
}
footer span {
  color: var(--primary);
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}
body {
  font-family: adobe-garamond-pro, serif;
  background-color: var(--neutral-100);
  min-height: 100vh;
}

section {
  display: flex;
}

.image-container {
  display: grid;
  grid-template-areas:
    "main main"
    "sec1 sec2";
}

.startAnimation {
  animation: MainImageAppear 2s ease both;
}

@keyframes MainImageAppear {
  0% {
    opacity: 0;
    transform: translateX(-100px);
  }
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@media (min-width: 320px) {
  li {
    list-style: none;
    transition: 0.5 all ease;
    color: black;
    transition: all 0.2s ease;
  }
  header,
  ul {
    display: flex;
  }

  ul {
    flex-wrap: wrap;
    margin-top: 0.8rem;
  }
  li {
    flex: 1 1 25%;
    text-align: center;
    padding: 0.5rem;
  }

  a {
    text-decoration: none;
    color: black;
    font-size: 1rem;
    transition: all 0.2s ease;
  }
  a:visited {
    color: black;
    transition: all 0.2s ease;
  }

  li:hover {
    scale: 1.1;
  }

  li:hover a:visited {
    color: var(--primary);
  }
  li:hover a {
    color: var(--primary);
  }

  li:nth-child(2) a {
    color: var(--primary);
    font-size: 1.1rem;
  }

  .header {
    display: none;
  }

  header {
    width: 100vw;
  }

  h1 {
    margin: 2rem 0 0 1rem;
    font-size: 5rem;
    line-height: 3.5rem;
    font-weight: 500;
  }
  .headerName {
    color: var(--primary);
  }

  .image-container {
    width: 100%;
    padding-top: 2rem;
  }
  picture {
    grid-area: main;
  }
  .main-image {
    width: 90vw;
    height: 90vw;
    object-fit: cover;
    border-radius: 50%;
    border: 3px solid black;
    object-position: top;
    grid-area: main;
    justify-self: center;
    box-shadow: var(--shadow-elevation-medium);
  }

  img {
    filter: grayscale(0%);
  }

  .secondary1,
  .secondary2 {
    width: 40vw;
    height: 40vw;
    object-fit: cover;
    border-radius: 50%;
    border: 3px solid black;
    animation-delay: 0.5s;
    justify-self: center;

    position: relative;
    top: -40%;

    box-shadow: var(--shadow-elevation-medium);
  }

  .secondary1 {
    grid-area: sec1;
  }

  .secondary2 {
    grid-area: sec2;
  }

  .main-image,
  .secondary1,
  .secondary2 {
    transition: all 0.3s ease-in-out;
  }

  .main-image:hover,
  .secondary1:hover,
  .secondary2:hover {
    transform: scale(1.1);
    filter: grayscale(0);
  }

  .text-container {
    display: none;
  }
}

@media (min-width: 801px) {
  body {
    margin: 0;
    padding: 0;
  }
  header {
    width: 100vw;
  }

  .header {
    padding: 1.2rem 1rem 1rem 3rem;
    display: flex;
    align-items: center;
    flex-basis: 40%;
  }

  ul {
    flex-basis: 50%;
    flex-wrap: nowrap;
    margin: 0;

    flex-grow : 1 ; 
    padding : 1rem 0 1rem 1rem 
  }

  li{
    margin : 0;
    padding : 0 ;
  }

  h1 {
    margin: 0 2rem 0 0;
    text-align: right;
    font-size: 8rem;
    line-height: initial;
    font-weight: 500;
  }

  .headerName {
    color: black;
  }
  .headerSpan {
    color: var(--primary);
  }
  .image-container {
    padding: 0;
  }

  .main-image {
    width: 350px;
    height: 350px;
    filter: grayscale(30%);
  }

  .secondary1,
  .secondary2 {
    width: 140px;
    height: 140px;
    filter: grayscale(30%);
  }

  .qrcode {
    width: 100px;
    height: 100px;
  }
  .text-container {
    margin: 6rem 0 0 6rem;
    gap: 2rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    padding: 0 2rem;
    letter-spacing: 0.2rem;
  }
  p {
    width: 30ch;
  }
}

@media (min-width: 1200px) {
  h1 {
    font-size: 10rem;
  }

  .image-container {
    grid-template-areas:
      "main sec1"
      "main sec2";
  }
  .main-image {
    width: 400px;
    height: 400px;
    box-shadow: var(--shadow-elevation-high);
  }

  .secondary1,
  .secondary2 {
    width: 150px;
    height: 150px;
    inset: 0 0 0 0;
    left: -40%;
    align-self: center;
    justify-self: start;
    box-shadow: var(--shadow-elevation-high);
  }
  .text-container {
    padding: 0;
    margin: 0;
    flex-basis: 50%;
  }
  .qrcode {
    width: 120px;
    height: 120px;
  }
}

@media (min-width: 1601px) {
  h1 {
    font-size: 14rem;
    margin-bottom: 5rem;
  }
  .main-image {
    width: 500px;
    height: 500px;
  }

  .secondary1,
  .secondary2 {
    width: 200px;
    height: 200px;
  }

  .qrcode {
    width: 150px;
    height: 150px;
  }
}

@media (min-width: 1851px) {
  h1 {
    font-size: 16rem;
  }
}

@media (min-width: 1981px) {
  header,
  ul {
    padding: 2rem;
  }

  .header {
    font-size: 1.5rem;
  }

  a {
    font-size: 1.5rem;
  }

  li:nth-child(2) a {
    font-size: 1.7rem;
  }

  h1 {
    font-size: 18rem;
    margin-bottom: 0;
  }
  .main-image {
    width: 600px;
    height: 600px;
  }

  .secondary1,
  .secondary2 {
    width: 200px;
    height: 200px;
  }
}

@media (min-width: 2500px) {
  h1 {
    font-size: 21rem;
  }
  .main-image {
    width: 700px;
    height: 700px;
  }

  .secondary1,
  .secondary2 {
    width: 250px;
    height: 250px;
  }

  .text-container {
    font-size: 1.5rem;
  }
}

@media (max-aspect-ratio: 4/3) {
  .secondary1,
  .secondary2 {
    top: -20%;
  }
}

